# NedoSpotlightSearch

./: README.md  pyproject.toml  requirements.txt
nedospotlightsearch/: config.py  integrations.py  main.py  search.py
system_programming_project/: main.py
