[tool.poetry]
name = "system-programming-project"
version = "0.1.0"
description = ""
authors = ["nedogeek <urunbaev.timur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pygobject = "^3.48.2"
pyinstaller = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
